src/test/deca/context/valid/personalTests/while.deca
// Test avec while

{
int a = 0;
while (a != 5) {
    println("Salut !");
    a = a + 1;
}
println("Fini !");

while (a != 10) {
    println("Ah bah c'est pas fini.");
    a = a + 1;
}
println("Ah bah si c'est fini.");

while (a != 15) {
    println("Ah bah c'est pas fini, encore.");
    a = a + 1;
}
println("Wow incroyable ça marche.");
}