src/test/deca/context/invalid/personalTests/undefineMethode.deca
// Test d'utilisation d'une méthode non définie

{
    int a = calculer(1, 2); // Erreur : calculer n'est pas définie
}